conversion avoided, append instead of overwriting