@@ -1,7 +1,7 @@
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.List;
+import java.nio.file.StandardOpenOption;
 
 public class FileLogger implements Logger {
     private final String fileName;
@@ -13,7 +13,7 @@ public class FileLogger implements Logger {
     @Override
     public void log(String message) {
         try {
-            Files.write(Path.of(fileName), List.of(message));
+            Files.writeString(Path.of(fileName), message + "\n", StandardOpenOption.CREATE, StandardOpenOption.APPEND);
         } catch (IOException e) {
             System.err.println("Error during file writing: " + e.getMessage());
         }
